--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
+    "framer-motion": "^12.7.5",
     "next": "15.3.0",
     "openai": "^4.95.1",
     "react": "^19.0.0",
